k8s/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-service
spec:
  selector:
    app: queue-service
  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30007
  type: NodePort
